final resume update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 							My hobbies include skateboarding, ultimate frisbee, Spikeball, and video games.
 							I have had the honor to work at Omni Flow Computers, Blackbaud, iD Tech, Vans, Cane's, and [your company can be here too].
 							<br><br>
-							My resume can be accessed <a href="Lee Forbes Resume.pdf">here</a>.
+							My outdated resume as of September 5, 2023 can be accessed <a href="Lee Forbes Resume.pdf">here</a>.
+							<br/>
+							See my revamped website <a href="https://leeaforbes.github.io/mywebsite/">here</a> for my current resume.
 							<br>
 							Feel free to contact me at: <br>
 							&emsp; &#128231; <a href="mailto:lee.a.forbes@gmail.com">lee.a.forbes@gmail.com</a> <br>
