--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			<ul class="navigation">
 				<li><a href="#home">Home<span>&#127968;</span></a></li>
 				<li><a href="https://leeaforbes.github.io/utskatespots/">UT Skate Spots<span>&#128761;</span></a></li>
-				<li><a href="photoviewerreborn/photoviewerreborn.html">Photo Viewer Reborn<span>&#129419;</span></a></li>
-				<li><a href="learnjava/learnjava.html">Learn Java<span>&#9749;</span></a></li>
-				<li><a href="utrunner/utrunner.html">UT Runner<span>&#127939;</span></a></li>
-				<li><a href="ogsite/index_old.html">OG Site<span>&#129497;</span></a></li>
+				<li><a href="photoviewerreborn.html">Photo Viewer Reborn<span>&#129419;</span></a></li>
+				<li><a href="learnjava.html">Learn Java<span>&#9749;</span></a></li>
+				<li><a href="utrunner.html">UT Runner<span>&#127939;</span></a></li>
+				<li><a href="index_old.html">OG Site<span>&#129497;</span></a></li>
 			</ul>
 
 			<div class="maincontent">
