--- a/photoviewerreborn.html
+++ b/photoviewerreborn.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="../common.css">
-	<link rel="stylesheet" href="photoviewerreborn.css">
+	<link rel="stylesheet" href="common.css">
+	<link rel="stylesheet" href="photoviewerreborn/photoviewerreborn.css">
   <title>Photo Viewer Reborn</title>
-  <link rel="shortcut icon" href="../icons/butterflyflower.ico"/>
+  <link rel="shortcut icon" href="icons/butterflyflower.ico"/>
 </head>
 <body class="bodycolor">
 
   <div class="header" id="home">
-		<div class="headerpic"><img src="../icons/butterflyflower.ico" height="100%"></div>
+		<div class="headerpic"><img src="icons/butterflyflower.ico" height="100%"></div>
 		<div class="headertext">Photo Viewer Reborn</div>
   </div>
 
@@ -20,10 +20,10 @@
 			<li><a href="#tutorial">Tutorial<span>&#128214</span></a></li>
 		</ul>
 
-		<img src="defaultwindow.png" width="50%" style="padding:0 10px"><br>
+		<img src="photoviewerreborn/defaultwindow.png" width="50%" style="padding:0 10px"><br>
 		<div style="margin: 20px">
 			<p id="download">Back to the good old days of photo viewing!</p>
-			<form method="get" action="PhotoViewerReborn.exe">
+			<form method="get" action="photoviewerreborn/PhotoViewerReborn.exe">
 				<button class="animatebutton">
 					<span>Download</span>
 				</button><br>
@@ -32,7 +32,7 @@
 
 		<iframe style="margin:0 10px" id="tutorial" src="https://www.youtube.com/embed/qtghzovnKQw" frameborder="5px" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<h3 style="padding:0 10px">Buttons:</h3>
-		<img src="buttons.png" width="50%" style="padding:0 10px"><br>
+		<img src="photoviewerreborn/buttons.png" width="50%" style="padding:0 10px"><br>
 
 		<h3 style="padding:0 10px">Keyboard Shortcuts:</h3>
 
@@ -116,7 +116,7 @@
 		<br>
 
 		<h3 style="padding:0 10px">View Options</h3>
-		<img src="viewoptions.png" width="50%" style="padding:0 10px"><br>
+		<img src="photoviewerreborn/viewoptions.png" width="50%" style="padding:0 10px"><br>
 	</div>
 
 <div class="footer" id="lost">
