--- a/index_old.html
+++ b/index_old.html
@@ -3,25 +3,25 @@
 <title>
 Beanberg Gaming
 </title>
-<link rel="shortcut icon" href="../icons/webicon.ico"/>
+<link rel="shortcut icon" href="icons/webicon.ico"/>
 </head>
 <center>
 <body bgcolor="00DE1E">
 <!--<h1>Beanberg Gaming</h1>-->
 Welcome to my website!<br>
 <h2>Minecraft Texture Pack</h2>
-<a href="Custom PvP.zip">PvP Texture Pack</a>
+<a href="ogsite/Custom PvP.zip">PvP Texture Pack</a>
 
 <h2>My Java Projects</h2><br><br>
 <h2>Not So Super Smash</h3>
-<img src="oldgames/NSSS/notsosupersmash.png" alt="NSSS Pic" style="width:480px;height:270px;">
-<img src="oldgames/NSSS/keys.png" alt="Keys Pic" style="width:480px;height:270px;"><br>
+<img src="ogsite/oldgames/NSSS/notsosupersmash.png" alt="NSSS Pic" style="width:480px;height:270px;">
+<img src="ogsite/oldgames/NSSS/keys.png" alt="Keys Pic" style="width:480px;height:270px;"><br>
 OTHER CONTROLS:<br>
 [ - toggle sound types (normal/silly)<br>
 ] - toggle hitboxes<br>
 \ - change background and platform theme<br>
 Click here to download the latest version:
-<a href="oldgames/NSSS/Not So Super Smash 0.7.jar">Not So Super Smash 0.7</a><br><br>
+<a href="ogsite/oldgames/NSSS/Not So Super Smash 0.7.jar">Not So Super Smash 0.7</a><br><br>
 NEW IN THIS UPDATE (0.7) (Not Enough Players Update)<br>
 - NEW Add bots to your game<br>
 -- custom bot names<br>
@@ -64,9 +64,9 @@ AD - movement keys<br>
 SPACE - fire<br>
 TUIOP - spawn bug keys<br>
 X - TOGGLE DEATHRAY<br>
-<img src="oldgames/galaga.png" alt="Galaga Pic" style="width:400px;height:400px;"><br>
+<img src="ogsite/oldgames/galaga.png" alt="Galaga Pic" style="width:400px;height:400px;"><br>
 Click here to download the latest version:
-<a href="oldgames/Galaga Plus 0.1.jar">Galaga Plus 0.1</a>
+<a href="ogsite/oldgames/Galaga Plus 0.1.jar">Galaga Plus 0.1</a>
 <br><br><br><br>
 <h2>Adventure Game</h3>
 CONTROLS:<br>
@@ -74,32 +74,32 @@ WASD - movement<br>
 T - save and quit<br>
 E - test message for the chat box (will change in near future)<br>
 Q - scroll with chat box<br>
-<img src="oldgames/agv.png" alt="Adventure Game Visual" style="width:960px;height:540px;"><br>
+<img src="ogsite/oldgames/agv.png" alt="Adventure Game Visual" style="width:960px;height:540px;"><br>
 Click here to download the latest version:
-<a href="oldgames/Adventure Game Alpha 0.1.jar">Adventure Game Alpha</a>
+<a href="ogsite/oldgames/Adventure Game Alpha 0.1.jar">Adventure Game Alpha</a>
 <br><br><br><br>
 <h2>ALL GAMES BELOW THIS MESSAGE ARE NOT GUARENTEED</h2>
 <h2>TO WORK ON SCREENS WITH A DIFFERENT RESOLUTION THAN</h2>
 <h2>1080x1920</h2>
 <h3>Gambling Simulator</h3>
-<img src="oldgames/gs.png" alt="Gambling Simulator" style="width:960px;height:540px;"><br>
+<img src="ogsite/oldgames/gs.png" alt="Gambling Simulator" style="width:960px;height:540px;"><br>
 Click here to download the latest version:
-<a href="oldgames/Gambling Simulator Beta 0.1.jar">Gambling Simulator Beta</a>
+<a href="ogsite/oldgames/Gambling Simulator Beta 0.1.jar">Gambling Simulator Beta</a>
 <br><br><br><br>
 <h3>Piano Tiles PC:</h3>
 Click here to download the latest version: 
-<a href="oldgames/Piano Tiles PC.jar">Piano Tiles PC</a><br>
+<a href="ogsite/oldgames/Piano Tiles PC.jar">Piano Tiles PC</a><br>
 I appologize for not yet having high scores for classic mode yet but it will be coming soon<br><br><br><br>
 <h3>AWPractice:</h3>
 Use mouse or keyboard controls!<br>
-<img src="oldgames/AWPractice/mouse.png" alt="Mouse Mode" style="width:480px;height:270px;">
-<img src="oldgames/AWPractice/cross.png" alt="Mouse Mode" style="width:480px;height:270px;"><br><br>
+<img src="ogsite/oldgames/AWPractice/mouse.png" alt="Mouse Mode" style="width:480px;height:270px;">
+<img src="ogsite/oldgames/AWPractice/cross.png" alt="Mouse Mode" style="width:480px;height:270px;"><br><br>
 Saves a log of scores in a text file!<br>
-<img src="oldgames/AWPractice/textfile.png" alt="Mouse Mode" style="width:800px;height:250px;"><br><br>
+<img src="ogsite/oldgames/AWPractice/textfile.png" alt="Mouse Mode" style="width:800px;height:250px;"><br><br>
 Click here to download the latest version: 
-<a href="oldgames/AWPractice/AWPractice 1.9.jar">AWPractice 1.9</a> or
-<a href="oldgames/AWPractice/allversions.html">All Versions</a><br>
-Drop <a href="oldgames/AWPractice/icon.jpg">this</a> in C:\Users\(Your Account Name) to use my icon!<br><br>
+<a href="ogsite/oldgames/AWPractice/AWPractice 1.9.jar">AWPractice 1.9</a> or
+<a href="ogsite/oldgames/AWPractice/allversions.html">All Versions</a><br>
+Drop <a href="ogsite/oldgames/AWPractice/icon.jpg">this</a> in C:\Users\(Your Account Name) to use my icon!<br><br>
 New in this version:<br>
 now refers to "boxes" as "enemies"<br>
 customize the enemy to your liking(size, color changing modes, 8 different colors)<br>
