--- a/utrunner.html
+++ b/utrunner.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-		<link rel="stylesheet" href="../common.css">
-		<link rel="stylesheet" href="utrunner.css">
+		<link rel="stylesheet" href="common.css">
+		<link rel="stylesheet" href="utrunner/utrunner.css">
     <title>UT Runner</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
   </head>
   <body>
     <div id="map"></div>
-    <script src="mapscript.js"></script>
+    <script src="utrunner/mapscript.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQmJM1qQESKp6g2F8iBhdLecXraH0EsxM&callback=initMap"async defer></script>
   </body>
 </html>
