--- a/photoviewerreborn.html
+++ b/photoviewerreborn.html
@@ -23,6 +23,7 @@
 		<img src="photoviewerreborn/defaultwindow.png" width="50%" style="padding:0 10px"><br>
 		<div style="margin: 20px">
 			<p id="download">Back to the good old days of photo viewing!</p>
+			<p>Load images faster than the Windows Photos app!</p>
 			<form method="get" action="photoviewerreborn/PhotoViewerReborn.exe">
 				<button class="animatebutton">
 					<span>Download</span>
